# proxy-subscription-converter

./: .env.example  .gitignore  .prettierrc  CLAUDE.md  README.md  example.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  tsconfig.bundle.json  vercel.json
alembic/: env.py
api/: models.py  requirements.txt  schemas.py
api/routers/: generate.py
backend/: .env.example  package.json  pyproject.toml  requirements.txt  tsconfig.json
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/api/: database.py  index.py  models.py  requirements.txt  schemas.py
backend/api/routers/: configs.py  generate.py
backend/src/app/: auth.py  database.py  index.py  models.py  schemas.py
backend/src/app/formats/: __init__.py  base.py  clash.py  common.py  detect.py  model.py  sing_box.py
backend/src/app/routers/: auth.py  configs.py  generate.py
common/: package.json  tsup.config.ts
docs/: metacubex-mihomo-config.md  sing-box-config.md
docs/CODEMAPS/: INDEX.md  backend.md  formats.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: AutoRegionSettingsForm.vue  FilterDialog.vue  FiltersPanel.vue  GroupsPanel.vue  LanguageSwitcher.vue  MonacoEditor.vue  SubscriptionsPanel.vue  TemplatePanel.vue
frontend/src/composables/: useProxyPreview.ts
frontend/src/i18n/: index.ts
frontend/src/pages/: ConfigEditorPage.vue  ConfigListPage.vue  LoginPage.vue  (+1 more)
(+8 files in other folders)
