[project]
name = "proxy-subscription-converter"
version = "0.1.0"
description = "Proxy subscription to sing-box config converter"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "httpx>=0.28",
    "pydantic>=2.11",
    "pydantic-settings>=2.8",
    "aiosqlite>=0.22.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "uvicorn[standard]>=0.42.0",
]
